--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "comercio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dan13l25.github.io/Preentrega2-Daniel-Aleman/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
